# wintermute

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  adverse-spec.md  alembic.ini  docker-compose.yml  dvc.yaml  imp3.md  imp6.md  malware_detector_manifest.json  pyproject.toml  requirements.txt  scan.py  scan_family.py  spec.md  spec2.md
api/: dependencies.py  main.py  schemas.py  ws.py
api/routers/: adversarial.py  dashboard.py  db_endpoints.py  pipeline.py  training.py  vault.py
configs/: data_config.yaml  database.yaml  malbert_config.yaml  model_config.yaml  sources.yaml
data/bazaar/: families.json
data/processed/: etl_manifest.json  families.json  (+1 more)
legacy/: 02_model.py  04_build_ms_dataset.py  05_download_malwarebazaar.py  06_build_extended_dataset.py
scripts/: wait-for-pg.sh
src/: 01_build_dataset.py  03_train.py  download_ms_dataset.py  generate_synthetic_data.py
tests/: conftest.py  test_alembic.py  test_api_db_endpoints.py  test_api_schemas.py  test_cli.py  test_cli_scan_db.py  test_db_cli.py  test_db_engine.py  test_db_etl_integration.py  test_db_models.py  test_db_repos.py  test_disassembler.py  test_engine_events.py  test_engine_hooks.py  test_etl.py  test_etl_sources.py  test_fusion.py  test_gat.py  test_learning.py  test_malbert.py  test_metrics.py  test_model.py  test_orchestrator_db_integration.py  test_pe_utils.py  test_pipeline.py  test_robustness.py  test_tokenizer.py  test_tracking.py  test_trainer_db_integration.py  test_tui.py  test_ws_manager.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+120 files in other folders)
